--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,10 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mediapipe/camera_utils": "^0.3.1675466862",
+    "@mediapipe/pose": "^0.5.1675469404",
+    "@mui/icons-material": "^6.4.0",
+    "@mui/material": "^6.4.0",
+    "axios": "^1.7.9",
+    "lodash.throttle": "^4.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
-    "react-router-dom": "^7.1.2",
+    "react-router-dom": "^7.1.3",
     "react-toastify": "^11.0.3"
   },
   "devDependencies": {
