--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -17,13 +17,16 @@
     "@mui/icons-material": "^6.4.0",
     "@mui/material": "^6.4.0",
     "axios": "^1.7.9",
+    "chart": "^0.1.2",
+    "chart.js": "^4.4.7",
     "framer-motion": "^12.0.1",
     "lodash.throttle": "^4.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.3",
-    "react-toastify": "^11.0.3"
+    "react-toastify": "^11.0.3",
+    "recharts": "^2.15.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
